[package]
name = "hebrides"
version = "0.1.2"
edition = "2021"
description = "Implementations for the real and complex numbers and their trigonometries"
repository = "https://github.com/rohanbulusu/hebrides"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
