[package]
name = "hebrides"
version = "0.1.3"
edition = "2021"
description = "Implementations for the real numbers, complex numbers, and basic linear algebra"
repository = "https://github.com/rohanbulusu/hebrides"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
